--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
     "deploy": "npx tsx scripts/deploy.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@hakit/components": "^5.1.5",
+    "@hakit/core": "^5.1.5",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@hakit/core": "^5.1.5",
-    "@hakit/components": "^5.1.5",
-    "@mui/material": "^6.5.0",
-    "@mui/icons-material": "^6.5.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1"
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/node": "^24.6.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "chalk": "^5.6.2",
+    "dotenv": "^17.2.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^6.1.0",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
+    "node-scp": "^0.0.25",
+    "prettier": "^3.6.2",
+    "prompts": "^2.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "prettier": "^3.6.2",
-    "dotenv": "^17.2.3",
-    "@types/node": "^24.6.2",
-    "node-scp": "^0.0.25",
-    "prompts": "^2.4.2",
-    "chalk": "^5.6.2"
+    "vite": "^7.1.7"
   }
 }
