--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_FOLDER_NAME=ha-dashboard
 VITE_HA_URL=http://homeassistant:8123
 # see https://shannonhochkins.github.io/ha-component-kit/?path=/docs/introduction-deploying--docs#retrieving-ssh-credentials for ssh details, these are needed to automatically deploy
 # to your home assistant instance
-VITE_SSH_USERNAME=root
-VITE_SSH_PASSWORD=1998z28
+VITE_SSH_USERNAME=
+VITE_SSH_PASSWORD=
 # eg 192.168.1.13
-VITE_SSH_HOSTNAME=homeassistant
+VITE_SSH_HOSTNAME=
