--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sync": "npx tsx scripts/sync-types.ts",
     "prebuild": "npm run prettier",
     "deploy": "npx tsx scripts/deploy.ts",
-    "generate-icons": "node scripts/generate-icons.js"
+    "generate-icons": "node scripts/generate-pwa-icons.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -40,6 +40,7 @@
     "node-scp": "^0.0.25",
     "prettier": "^3.6.2",
     "prompts": "^2.4.2",
+    "sharp": "^0.33.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
